# libbottles

./: README.md  TODO.md  requirements.txt  setup.cfg  setup.py
libbottles/: bottle.py  component.py  exceptions.py  globals.py  manager.py
libbottles/components/: component.py  repository.py  runner.py
libbottles/utils/: checks.py  connection.py  request.py
