[metadata]
name = libbottles
version = 0.1
author = Mirko Brombin
author_email = send@mirko.pm
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bottlesdevs/libbottles
project_urls =
    Bug Tracker = https://github.com/bottlesdevs/libbottles/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX :: Linux
[options]
python_requires = >=3.6